test/classes/figueroa/RecordDestructor3.good
RecordDestructor3.chpl:9: error: inheritance is not currently supported for records
RecordDestructor3.chpl:9: note: R2 declared as a record here
